--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "phoenix_html": "file:deps/phoenix_html",
     "braces": ">=2.3.1",
     "clean-css": ">=4.1.11",
-    "growl": ">=1.10.0"
+    "growl": ">=1.10.0",
+    "lodash": ">=4.17.13"
   },
   "devDependencies": {
-    "babel-brunch": "6.0.6",
+    "babel-brunch": "^7.0.1",
     "brunch": "^2.10.17",
     "clean-css-brunch": "2.10.0",
     "uglify-js-brunch": "2.1.1"
