--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "acorn": ">=5.7.4",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "braces": ">=2.3.1",
@@ -15,7 +16,7 @@
   },
   "devDependencies": {
     "babel-brunch": "^7.0.1",
-    "brunch": "^2.10.17",
+    "brunch": "^3.0.0",
     "clean-css-brunch": "2.10.0",
     "uglify-js-brunch": "2.1.1"
   }
