--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
-    "acorn": ">=5.7.4",
-    "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html",
+    "acorn": "^8.0.1",
     "braces": ">=2.3.1",
-    "clean-css": ">=4.1.11",
+    "clean-css": "^4.2.3",
     "growl": ">=1.10.0",
-    "lodash": ">=4.17.19",
-    "kind-of": ">=6.0.3"
+    "kind-of": ">=6.0.3",
+    "lodash": "^4.17.20",
+    "phoenix": "file:deps/phoenix",
+    "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
     "babel-brunch": "^7.0.1",
     "brunch": "^3.0.0",
-    "clean-css-brunch": "2.10.0",
+    "clean-css-brunch": "^3.0.0",
     "uglify-js-brunch": "2.1.1"
   }
 }
